# ImagoEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
docs/: libraries.md
test/: CMakeLists.txt
test/src/: catch2_test.cpp  fmt_test.cpp  glm_test.cpp  imgui_test.cpp  json_test.cpp  sdl2_test.cpp  sfml_test.cpp  single_file_test.cpp  spdlog_test.cpp  stb_test.cpp  yaml_test.cpp
